--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Test Page: Don't Panic</title>
+    <title>Test Page</title>
     <meta charset="utf-8">
     <style>
       #exec-bio {
