--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       .bio-box a {
         color: green;
       }
+      .red {
+        background: red;
+      }
     </style>
   </head>
   <body>
@@ -38,7 +41,7 @@
     <div class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box red">
       <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
