add alert to id div

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       .bio-box a {
         color: green;
       }
-      .red {
-        background: red;
+      .alert {
+        background: purple;
       }
     </style>
   </head>
@@ -32,7 +32,7 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box">
+    <div id="exec-bio" class="bio-box alert">
       <a href="http://example.com/">I'm a link</a>
     </div>
     <div class="bio-box">
@@ -41,7 +41,7 @@
     <div class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box red">
+    <div class="bio-box alert">
       <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
