add combined style

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       .alert {
         background: purple;
       }
+      #exec-bio.alert {
+        background: red;
+      }
     </style>
   </head>
   <body>
