update red alert

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         color: green;
       }
       .alert {
-        background: purple;
+        background: red;
       }
       #exec-bio.alert {
         background: red;
