--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         color: red;
       }
 
+      h2 {
+        font-size: 30px;
+      }
+
       /* SOCIAL STYLES */
       .social-link {
         color: blue;
@@ -17,6 +21,7 @@
       /* BIO STYLES */
       .bio-box {
         border: 1px solid black;
+        width: 200px;
       }
       .bio-copy a {
         color: green;
