--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
       /* BIO STYLES */
       .bio-box {
         border: 10px solid black;
-        width: 200px;
+        width: 50%;
       }
       .bio-copy a {
         color: green;
+      }
+      .bio-wrapper {
+        width: 500px
       }
     </style>
   </head>
@@ -42,6 +45,7 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
+  <div class="bio-wrapper">
     <div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="http://twitter.com/mhartl" class="social-link">here</a>
@@ -91,5 +95,6 @@
         The Future
       </p>
     </div>
+  </div>
   </body>
 </html>
