--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       /* BIO STYLES */
       .bio-box {
         border: 1px solid black;
+        width: 50%;
       }
       .bio-copy a {
         color: green;
       }
       .bio-wrapper {
-        width: 500px
       }
     </style>
   </head>
